--- a/Resources/views/Field/friendlycaptcha.twig
+++ b/Resources/views/Field/friendlycaptcha.twig
@@ -2,8 +2,15 @@
 {% set required = true %}
 
 {% set js = getAssetUrl('plugins/MauticFriendlyCaptchaBundle/Assets/js/add-captcha.js', null, null, true)  %}
-{% set fcWidgetJs = getAssetUrl('plugins/MauticFriendlyCaptchaBundle/Assets/js/widget.js', null, null, true) %}
-{% set fcWidgetModuleJs = getAssetUrl('plugins/MauticFriendlyCaptchaBundle/Assets/js/widget.module.min.js', null, null, true) %}
+
+{% set version = field.customParameters.version %}
+{% if version == 'v1' %}
+    {% set fcWidgetJs = getAssetUrl('plugins/MauticFriendlyCaptchaBundle/Assets/js/v1/widget.js', null, null, true) %}
+    {% set fcWidgetModuleJs = getAssetUrl('plugins/MauticFriendlyCaptchaBundle/Assets/js/v1/widget.module.min.js', null, null, true) %}
+{% else %}
+    {% set fcWidgetJs = getAssetUrl('plugins/MauticFriendlyCaptchaBundle/Assets/js/v2/site.compat.min.js', null, null, true) %}
+    {% set fcWidgetModuleJs = getAssetUrl('plugins/MauticFriendlyCaptchaBundle/Assets/js/v2/site.min.js', null, null, true) %}
+{% endif %}
 
 {% set formName = formName|default('')|replace({'_': ''}) %}
 {% set hashedFormName = md5(formName) %}
@@ -26,17 +33,12 @@
     <div id="{{ captchaWrapperId }}">
         {% set inputName = 'mauticform[' ~ field.alias ~ ']' %}
         <script src="{{ js }}"></script>
-        <script
-            type="module"
-            src="{{ fcWidgetModuleJs }}"
-            async
-            defer
-        ></script>
+        <script type="module" src="{{ fcWidgetModuleJs }}" async defer></script>
         <script nomodule src="{{ fcWidgetJs }}" async defer></script>
 
         <script type="text/javascript">
             window.addEventListener('load', function() {
-                scheduleAddCaptcha('{{ captchaWrapperId }}', '{{ inputName }}', '{{ siteKey }}');
+                scheduleAddCaptcha('{{ captchaWrapperId }}', '{{ inputName }}', '{{ siteKey }}', '{{ version }}');
             });
         </script>
     </div>
