add select for captcha challenge start mode

--- a/Resources/views/Field/friendlycaptcha.twig
+++ b/Resources/views/Field/friendlycaptcha.twig
@@ -46,7 +46,8 @@
                         '{{ captchaWrapperId }}', 
                         '{{ inputName }}', 
                         '{{ siteKey }}', 
-                        '{{ version }}'
+                        '{{ version }}',
+                        '{{ field.properties.mode }}'
                     );
                 });
             </script>
