--- a/Resources/views/Field/friendlycaptcha.twig
+++ b/Resources/views/Field/friendlycaptcha.twig
@@ -43,7 +43,7 @@
 
             <script type="text/javascript">
                 window.setTimeout(function() {
-                    scheduleAddCaptcha(
+                    FriendlyCaptchaMautic.scheduleAddCaptcha(
                         '{{ captchaWrapperId }}',
                         '{{ inputName }}',
                         '{{ siteKey }}',
